--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
     <string name="app_name">MyDemo</string>
+    <string name="my_title">My Title</string>
+    <string name="detail_page">Detail Page</string>
+    <string name="wrong_information">Wrong Information</string>
 
 
 </resources>
