add compose page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="my_title">My Title</string>
     <string name="detail_page">Detail Page</string>
     <string name="wrong_information">Wrong Information</string>
+    <string name="title_activity_compose">ComposeActivity</string>
 
 
 </resources>
